#pragma once

/**
 * @file Stats.h
 * @brief Core combat stat block for all Units.
 */

struct Stats {
	int hp{};
	int maxHp{};
	int atk{};
	int def{};
	int spd{};
};